# rust-spa-auth

./: .gitignore  LICENSE  README.md  build-debug.sh
client/: .gitignore  README.md  package-lock.json  package.json
client/src/: App.vue
client/src/api/: index.js
client/src/plugins/: vuetify.js
client/src/router/: index.js
client/src/views/: Home.vue  Login.vue
server/: Cargo.toml  run_tests.sh  sqlx-data.json
server/db/: create_sqlite3_db.sh  init_sqlite3_db.sql
server/src/: auth.rs  error.rs  main.rs  routes.rs  storage.rs
server/src/storage/: db.rs  get_user.sql  in_memory.rs
server/tls/: server.rsa.crt  server.rsa.key
