[package]
name = "rust-spa-auth"
version = "0.1.0"
authors = ["Jan Tache <j.andreitabs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { git = "https://github.com/jtroo/warp", features = ["tls"] }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

anyhow = "1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.11"
chrono = "0.4"
async-trait = "0.1"

rand = { version = "0.8", features = ["std_rng"] }
argon2 = { version = "0.1", features = ["password-hash"] }
bincode = "1"
chacha20poly1305 = "0.7"
base64 = "0.13"
jsonwebtoken = "7.2"

[profile.release]
panic = 'abort'
lto = 'thin'

[features]
dev_cors = []
